--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.4",
     "html": "^1.0.0",
+    "json-stringify-safe": "^5.0.1",
     "mongoose": "^5.4.6",
     "multer": "^1.3.0"
   },
